--- a/userland/Makefile
+++ b/userland/Makefile
@@ -1,4 +1,4 @@
-all: libpfring pcap ring_examples libzero_examples zc_examples tcpdump lib_c++
+all: libpfring pcap zc_examples tcpdump
 
 ###################
 
